--- a/commands.html
+++ b/commands.html
@@ -4,6 +4,16 @@
 		<p>git flow feature start MYFEATURE</p>
 		<p>Cоздаёт новую ветку фичи, основанную на ветке "develop", и переключается на неё.</p>
 	</li>
+	<li>
+		<p>Завершение фичи:</p>
+		<p>git flow feature finish MYFEATURE</p>
+		<p>Cоздаёт новую ветку фичи, основанную на ветке "develop", и переключается на неё.</p>
+	</li>
+	<li>
+		<p>Публикация фичи:</p>
+		<p>git flow feature publish MYFEATURE</p>
+		<p>Публикует фичу на удаленном сервере.</p>
+	</li>
 </ul>
 
 Начало разработки фичи:
