--- a/commands.html
+++ b/commands.html
@@ -14,6 +14,13 @@
 		<p>git flow feature publish MYFEATURE</p>
 		<p>Публикует фичу на удаленном сервере.</p>
 	</li>
+	<li>
+		<p>Получение опубликованной фичи:</p>
+		<p>git flow feature pull origin MYFEATURE</p>
+		<p>Публикует фичу на удаленном сервере.</p>
+		<p>Можно отслеживать фичу в репозитории origin с помощью команды:</p>
+		<p>git flow feature track MYFEATURE</p>
+	</li>
 </ul>
 
 Начало разработки фичи:
