--- a/commands.html
+++ b/commands.html
@@ -1,3 +1,5 @@
+<p>Работа с feature</p>
+
 <ul>
 	<li>
 		<p>Начало разработки фичи:</p>
@@ -23,5 +25,15 @@
 	</li>
 </ul>
 
-Начало разработки фичи:
+<p>Работа с релизами</p>
+
+<ul>
+	<li>
+		<p>Начало разработки фичи:</p>
+		<p>git flow feature start MYFEATURE</p>
+		<p>Cоздаёт новую ветку фичи, основанную на ветке "develop", и переключается на неё.</p>
+	</li>
+	
+</ul>
+
 <p></p>
