add release info

--- a/commands.html
+++ b/commands.html
@@ -29,9 +29,13 @@
 
 <ul>
 	<li>
-		<p>Начало разработки фичи:</p>
-		<p>git flow feature start MYFEATURE</p>
-		<p>Cоздаёт новую ветку фичи, основанную на ветке "develop", и переключается на неё.</p>
+		<p>Начало релиза:</p>
+		<p>git flow release start RELEASE</p>
+		<p>Cоздаёт ветку релиза, ответвляя от ветки develop.</p>
+		<p>Далее нужно опубликовать ветку релиза, чтобы другие могли делать в нее коммиты.</p>
+		<p>git flow release publish RELEASE</p>
+		<p>Отслеживать релиз можно с помощью команды:</p>
+		<p>git flow release track RELEASE</p>
 	</li>
 	
 </ul>
