complete release info

--- a/commands.html
+++ b/commands.html
@@ -37,6 +37,16 @@
 		<p>Отслеживать релиз можно с помощью команды:</p>
 		<p>git flow release track RELEASE</p>
 	</li>
+	<li>
+		<p>Завершение релиза:</p>
+		<p>git flow release finish RELEASE</p>
+		<p>Ветка релиза сливается в master</p>
+		<p>Релиз помечается тегом с именем, равным его имени.</p>
+		<p>Ветка релиза сливается обратно в ветку develop.</p>
+		<p>Ветка релиза удаляется.</p>
+		<p>Далее нужно отправить изменения:</p>
+		<p>git push --tags</p>
+	</li>
 	
 </ul>
 
