--- a/commands.html
+++ b/commands.html
@@ -50,4 +50,21 @@
 	
 </ul>
 
+<p>Работа с hotfix</p>
+
+<ul>
+	<li>
+		<p>Начало исправления:</p>
+		<p>git flow hotfix start VERSION [BASENAME]</p>
+		<p>BASENAME - коммит, от которого начинается ответвление.</p>
+		<p>VERSION - название</p>		
+	</li>	
+	<li>
+		<p>Завершение исправления:</p>
+		<p>git flow hotfix finish VERSION</p>
+		<p>По завершению исправление сливается в develop и master</p>
+		<p>Коммит в ветке master помечается тегом с версией исправления</p>		
+	</li>
+</ul>
+
 <p></p>
